Further refactorings in the imported files.

--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -13,6 +13,8 @@ The version of the file is declared in a [version] section.
 
 As is probably already clear, content before the first section is ignored.
 
+Presently, only US ASCII is allowed in this file.
+
 [version]
 2015-09-20
 [protocol]
