--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
                             <outputDirectory>${project.build.directory}/generated-sources/antlr4/org/harctoolbox/irp</outputDirectory>
                             <!--atn>true</atn-->
                             <treatWarningsAsErrors>true</treatWarningsAsErrors>
-                            <listener>true</listener>
+                            <listener>false</listener>
                             <visitor>true</visitor>
                         </configuration>
                     </execution>
@@ -137,10 +137,11 @@
             <artifactId>stringtemplate</artifactId>
             <scope>compile</scope>
         </dependency-->
-        <!--dependency>
+        <dependency>
             <groupId>com.beust</groupId>
             <artifactId>jcommander</artifactId>
             <scope>compile</scope>
-        </dependency-->
+            <version>1.48</version>
+        </dependency>
     </dependencies>
 </project>
