--- a/pom.xml
+++ b/pom.xml
@@ -143,5 +143,11 @@
             <scope>compile</scope>
             <version>1.48</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
