--- a/pom.xml
+++ b/pom.xml
@@ -47,21 +47,21 @@
                 </executions>
             </plugin>
             <!-- Binary tarballs from src/assembly*/ files. -->
-            <!--plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.harctoolbox.IrpMaster.IrpMaster</mainClass>
+                            <mainClass>org.harctoolbox.irp.Expression</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <descriptors>
+                    <!--descriptors>
                         <descriptor>src/assembly/target.xml</descriptor>
-                    </descriptors>
+                    </descriptors-->
                 </configuration>
                 <executions>
                     <execution>
@@ -70,7 +70,7 @@
                         <goals> <goal>single</goal> </goals>
                     </execution>
                    </executions>
-            </plugin-->
+            </plugin>
 
             <plugin>
                 <!-- Copy resources directly to target dir. -->
@@ -128,8 +128,14 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.5.1-1</version>
-            <scope>compile</scope>
+            <version>4.5.3</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-tool-testsuite</artifactId>
+            <version>4.5.3</version>
+            <type>jar</type>
         </dependency>
         <!--dependency>
             <groupId>org.antlr</groupId>
