--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -1,8 +1,11 @@
+[encoding]
+WINDOWS-1252
+
 The format of this file is as follows:
 
 The protocols are defined in [protocol] sections.
 Every protocol has a unique name, declared as name=.
-By setting usable=no, the current protocol is effectively ignored.
+By setting usable=no, the current protocol is ignored.
 The IRP form of the protocol are declared as irp=... which has to be
 on exactly one line, possibly continued with backslashes at the end of the
 physical lines.
@@ -12,8 +15,6 @@ The [documentation] section contains an XHTML fragment, describing the current p
 The version of the file is declared in a [version] section.
 
 As is probably already clear, content before the first section is ignored.
-
-Presently, only US ASCII is allowed in this file.
 
 [version]
 2015-09-20
