--- a/pom.xml
+++ b/pom.xml
@@ -154,5 +154,11 @@
             <version>6.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.sf.saxon</groupId>
+            <artifactId>Saxon-HE</artifactId>
+            <version>9.7.0-6</version>
+        </dependency>
+
     </dependencies>
 </project>
