Migrated IrpProtocols to xml.

--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -405,7 +405,7 @@ UEI_protocol=00A4
 
 irp={37.3k,992}<1,-1|1,-3>(5,-2,F:6,D:2,C:4,1,-60)+\
 {C= ((#(F&25) + #(D&5))&1) + 2*((#(F&43) + #(D&7))&1) + 4*((#(F&22) + #(D&7))&1) + 8*((#(F&44) + #(D&6))&1)}\
-[D:0..7, F:0..63, C:0..15]
+[D:0..7, F:0..63]
 EFC_translation=NONE
 [documentation]
 This is a moderately robust protocol, but <A href="#spurious">spurious decodes</A> are still possible.
@@ -757,7 +757,7 @@ EFC_translation=MSB
 
 [protocol]
 name=Nokia32
-irp={36k,msb}<164,-276|164,-445|164,-614|164,-783>(412,-276,D:8,S:8,T:1,X:7,F:8,164,^100m)+ [D:0..255,S:0..255,F:0..255,T:0..1,X:0..127]
+irp={36k,msb}<164,-276|164,-445|164,-614|164,-783>(412,-276,D:8,S:8,T:1,X:7,F:8,164,^100m)+ [D:0..255,S:0..255,F:0..255,T@:0..1=0,X:0..127]
 EFC_translation=MSB
 [documentation]
 The Nokia32 protocol is one variation of the RCMM 1.5 protocol developed by Philips.  RCMM refers to X as "System" and to D:2,S:4:4 as "Customer"
@@ -909,7 +909,7 @@ This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are l
 [protocol]
 name=RC5
 UEI_protocol=00E8
-irp={36k,msb,889}<1,-1|-1,1>((1:1,~F:1:6,T:1,D:5,F:6,^114m)+,T=1-T)[T@:0..1=0,D:0..31,F:0..127]
+irp={36k,msb,889}<1,-1|-1,1>((1:1,~F:1:6,T:1,D:5,F:6,^114m)+,T=1-T)[D:0..31,F:0..127,T@:0..1=0]
 EFC_translation=6-bit MSB comp with 2-bit mini-combo
 [documentation]
 Lists three different EFCs because this protocol is a <A href="#mini combo">mini combo</A>.
@@ -1887,3 +1887,33 @@ This IR protocol is very similar to NEC2, except the repeat behavior is differen
 The second and additional frames of a repeating signal send the OBC + 128.
 
 See http://www.hifi-remote.com/forums/viewtopic.php?p=115990#115990.
+
+# http://www.hifi-remote.com/forums/viewtopic.php?t=16928&start=18
+[protocol]
+name=supersony
+#irp={40.0k,600}<1,-1|2,-1>(                                             \
+#                       X:1:7 ?          (4,-1,X:7,Y:8,^45000u)      \
+#                             : (y:1:7 ? (4,-1,X:7,Y:5,N1:8,^45000u) \
+#                                      : (4,-1,X:7,Y:5,^45000u)      \
+#				)                                   \
+#		       )3+                                          \
+#{A=fixed:-8:24, B=fixed:-8:16, C=fixed:-8:8, D=fixed:-8,            \
+#X=variable:-8:8, Y=variable:-8,                                     \
+#N1 =  Y:-2:5==0 ? A                                                 \
+#    : Y:-2:5==1 ? B                                                 \
+#    : Y:-2:5==2 ? C                                                 \
+#    : Y:-2:5==3 ? D }
+irp={40.0k,600}<1,-1|2,-1>(                                             \
+                       X:1:7 ?          (4,-1,X:7,Y:8,^45000u)      \
+                             : (y:1:7 ? (4,-1,X:7,Y:5,N1:8,^45000u) \
+                                      : (4,-1,X:7,Y:5,^45000u)      \
+				)                                   \
+		       )3+                                          \
+{A=fixed:-8:24, B=fixed:-8:16, C=fixed:-8:8, D=fixed:-8,            \
+X=variable:-8:8, Y=variable:-8,                                     \
+N1 =  Y:-2:5==0 ? A                                                 \
+    : Y:-2:5==1 ? B                                                 \
+    : Y:-2:5==2 ? C                                                 \
+    : D } [ fixed:0..UINT32_MAX,variable:0..UINT16_MAX]
+[documentation]
+See http://www.hifi-remote.com/forums/viewtopic.php?t=16928&start=18
