--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
     <url>http://www.harctoolbox.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <build>
         <plugins>
@@ -158,6 +158,13 @@
             <groupId>net.sf.saxon</groupId>
             <artifactId>Saxon-HE</artifactId>
             <version>9.7.0-6</version>
+        </dependency>
+        
+        <!-- Only for testing! Might be removed in the future -->
+        <dependency>
+            <groupId>org.harctoolbox</groupId>
+            <artifactId>IrpMaster</artifactId>
+            <version>1.2</version>
         </dependency>
 
     </dependencies>
