Rendering now working, very first version.

--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -1215,7 +1215,7 @@ name=Sejin-M-38
 alt_name=Sejin-M-56
 usable=no
 UEI_protocol=0161
-
+[documentation]
 IRP notation for Sejin-<i>M</i>-38: {38.8k,310,msb}<-1|1>(<8:4|4:4|2:4|1:4>(3,3:2,Dx:8,Fx:8,Fy:8,E:4,C:4,-L))+
 
 IRP notation for Sejin-<i>M</i>-56: {56.3k,310,msb}<-1|1>(<8:4|4:4|2:4|1:4>(3,3:2,Dx:8,Fx:8,Fy:8,E:4,C:4,-L))+
