--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -1,6 +1,3 @@
-[encoding]
-WINDOWS-1252
-
 The format of this file is as follows:
 
 The protocols are defined in [protocol] sections.
@@ -17,7 +14,7 @@ The version of the file is declared in a [version] section.
 As is probably already clear, content before the first section is ignored.
 
 [version]
-2015-09-20
+2016-08-03
 [protocol]
 name=48-NEC
 usable=no
@@ -46,7 +43,7 @@ This protocol signals repeats by the use of <A href="#repeat">dittos</A>.
 
 [protocol]
 name=AdNotam
-irp={35.7k,895,msb}<1,-1|-1,1>(0:1,1:1,D:6,F:6,^114m)+[D:0..63,F:0..63]
+irp={35.7k,895,msb}<1,-1|-1,1>(1,-2,1,D:6,F:6,^114m)+[D:0..63,F:0..63]
 [documentation]
 Very similar to RC5, except AdNotam uses two start bits, and no toggle bit.
 
@@ -215,7 +212,7 @@ irp={38.0k,315}<1,-6|6,-1>(D:10,F:8,-18m)+ [D:0..1023,F:0..255]
 [protocol]
 name=CanalSat
 UEI_protocol=018C
-irp={55.5k,250,msb}<-1,1|1,-1>(T=0,(1:1,D:7,S:6,T:1,0:1,F:7,-89m,T=1)+)[D:0..127,S:0..63,F:0..127]
+irp={55.5k,250,msb}<-1,1|1,-1>(T=0,(1,-1,D:7,S:6,T:1,0:1,F:7,-89m,T=1)+)[D:0..127,S:0..63,F:0..127]
 #irp={55.5k,250,msb}<-1,1|1,-1>(T=0,1:1,D:7,S:6,T:1,0:1,F:7,-89m,(T=1,1:1,D:7,S:6,T:1,0:1,F:7,-89m)+)[D:0..127,S:0..63,F:0..127]
 EFC_translation=7-bit MSB.
 [documentation]
@@ -648,6 +645,7 @@ upgrades.  Version 1.17 will also have direct support for MCE
 [protocol]
 name=Metz19
 irp={37.9k,106,msb}<4,-9|4,-16>((8,-22,T:1,D:3,~D:3,F:6,~F:6,4,-125m)+,T=1-T)[D:0..7,F:0..63,T@:0..1=0]
+[documentation]
 The toggle bit T is inverted each time a new button press occurs.
 
 
@@ -757,7 +755,7 @@ EFC_translation=MSB
 
 [protocol]
 name=Nokia32
-irp={36k,msb}<164,-276|164,-445|164,-614|164,-783>(412,-276,D:8,S:8,T:1,X:7,F:8,164,^100m)+ [D:0..255,S:0..255,F:0..255,T@:0..1=0,X:0..127]
+irp={36k,msb}<164,-276|164,-445|164,-614|164,-783>(412,-276,D:8,S:8,T:1,X:7,F:8,164,^100m,T=1-T)+ [D:0..255,S:0..255,F:0..255,T@:0..1=0,X:0..127]
 EFC_translation=MSB
 [documentation]
 The Nokia32 protocol is one variation of the RCMM 1.5 protocol developed by Philips.  RCMM refers to X as "System" and to D:2,S:4:4 as "Customer"
@@ -825,8 +823,7 @@ Lists three different EFCs because this protocol is a <A href="#mini combo">mini
 [protocol]
 name=PCTV
 #irp={38.4k,832}<0,-1|1,-0>(2,-8,1,D:8,F:8,2,-???) [D:0..255,F:0..255]
-irp={38.4k,832}<0,-1|1,-0>(2,-8,1,D:8,F:8,2,-100m) [D:0..255,F:0..255]
- [D:0..255,F:0..255]
+irp={38.4k,832}<-1|1>(2,-8,1,D:8,F:8,2,-100m) [D:0..255,F:0..255]
 
 [protocol]
 name=pid-0001
@@ -909,7 +906,7 @@ This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are l
 [protocol]
 name=RC5
 UEI_protocol=00E8
-irp={36k,msb,889}<1,-1|-1,1>((1:1,~F:1:6,T:1,D:5,F:6,^114m)+,T=1-T)[D:0..31,F:0..127,T@:0..1=0]
+irp={36k,msb,889}<1,-1|-1,1>((1,~F:1:6,T:1,D:5,F:6,^114m)*,T=1-T)[D:0..31,F:0..127,T@:0..1=0]
 EFC_translation=6-bit MSB comp with 2-bit mini-combo
 [documentation]
 Lists three different EFCs because this protocol is a <A href="#mini combo">mini combo</A>.
@@ -922,19 +919,19 @@ Philips terminology.
 [protocol]
 name=RC5-7F
 UEI_protocol=0182
-irp={36k,msb,889}<1,-1|-1,1>((1:1, ~D:1:5,T:1,D:5,F:7,^114m)+,T=1-T) [D:0..63,F:0..127,T@:0..1=0]
+irp={36k,msb,889}<1,-1|-1,1>((1, ~D:1:5,T:1,D:5,F:7,^114m)+,T=1-T) [D:0..63,F:0..127,T@:0..1=0]
 EFC_translation=7-bit MSB comp
 
 [protocol]
 name=RC5-7F-57
 UEI_protocol=0182
-irp={57k,msb,889}<1,-1|-1,1>(1:1, ~D:1:5,T:1,D:5,F:7,^114m)+[D:0..63,F:0..127,T@:0..1=0]
+irp={57k,msb,889}<1,-1|-1,1>(1, ~D:1:5,T:1,D:5,F:7,^114m)+[D:0..63,F:0..127,T@:0..1=0]
 EFC_translation=7-bit MSB comp
 
 [protocol]
 name=RC5x
 UEI_protocol=00F2
-irp={36k,msb,889}<1,-1|-1,1>((1:1,~S:1:6,T:1,D:5,-4,S:6,F:6,^114m)+,T=1-T) [D:0..31,S:0..127,F:0..63,T@:0..1=0]
+irp={36k,msb,889}<1,-1|-1,1>((1,~S:1:6,T:1,D:5,-4,S:6,F:6,^114m)+,T=1-T) [D:0..31,S:0..127,F:0..63,T@:0..1=0]
 EFC_translation=NONE
 [documentation]
 The official (UEI) protocol executor for RC5x does not support EFC
@@ -1168,8 +1165,8 @@ called "Command".
 
 [protocol]
 name=Revox
-#irp={0k,15u}<1,-9|1,-19>(1:1,-10,0:1,D:4,F:6,1:1,-10,1:1,-100m)+[D:0..15,F:0..63]
-irp={67k,15u}<1,-9|1,-19>(1:1,-10,0:1,D:4,F:6,1:1,-10,1:1,-100m)+[D:0..15,F:0..63]
+irp={0k,15u}<1,-9|1,-19>(1:1,-10,0:1,D:4,F:6,1:1,-10,1:1,-100m)+[D:0..15,F:0..63]
+#irp={67k,15u}<1,-9|1,-19>(1:1,-10,0:1,D:4,F:6,1:1,-10,1:1,-100m)+[D:0..15,F:0..63]
 
 [documentation]
 Revox uses no modulation, but many remotes will not accept the 0100 Pronto format.
@@ -1377,7 +1374,7 @@ EFC_translation=LSB
 
 [protocol]
 name=StreamZap
-irp={36k,msb,889}<1,-1|-1,1>(1:1,~F:1:6,T:1,D:6,F:6,^114m)+[D:0..63,F:0..63,T:0..1]
+irp={36k,msb,889}<1,-1|-1,1>(1,~F:1:6,T:1,D:6,F:6,^114m)+[D:0..63,F:0..63,T:0..1]
 EFC_translation=6-bit MSB comp
 [documentation]
 DecodeIR V2.43 decodes this as RC5-7F
@@ -1385,7 +1382,7 @@ DecodeIR V2.43 decodes this as RC5-7F
 
 [protocol]
 name=StreamZap-57
-irp={57k,msb,889}<1,-1|-1,1>(1:1,~F:1:6,T:1,D:6,F:6,^114m)+[D:0..63,F:0..63,T:0..1]
+irp={57k,msb,889}<1,-1|-1,1>(1,~F:1:6,T:1,D:6,F:6,^114m)+[D:0..63,F:0..63,T:0..1]
 EFC_translation=6-bit MSB comp
 [documentation]
 DecodeIR V2.43 decodes this as RC5-7F-57
@@ -1676,7 +1673,7 @@ irp={38k,136,msb}<210u,-760u> \
 ( \
 <0:1|0:1,-1|0:1,-2|0:1,-3|0:1,-4|0:1,-5|0:1,-6|0:1,-7|0:1,-8|0:1,-9|0:1,-10|0:1,-11|0:1,-12|0:1,-13|0:1,-14|0:1,-15> \
   (T=0, \
-     ((S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,FF:16,210u,[-80.4m][-80.4m][-13.8m],T=8)+,T=9)2 \
+     ((S:4:4,C1:4,S:4,15:4,OEM:8,D:8,210u,-13.8m,S:4:4,C2:4,T:4,S:4,FF:16,210u,[-80.4m][-80.4m][-13.8m],T=8)+,T=9) \
   ) \
 ) \
 { C1=-(S+S::4+15+OEM+OEM::4+D+D::4), \
@@ -1704,17 +1701,17 @@ name=XX
 [protocol]
 name=Zaptor-36
 irp={36k,330,msb}<-1,1|1,-1>([T=0][T=0][T=1],8,-6,2,D:8,T:1,S:7,F:8,E:4,C:4,-74m)+{C = (D:4+D:4:4+S:4+S:3:4+8*T+F:4+F:4:4+E)&15}[D:0..255,S:0..127,F:0..127,E:0..15]
-where T=0 for all frames except the last, T=1 for last frame, E is a checksum seed.
 EFC_translation=MSB
 [documentation]
+where T=0 for all frames except the last, T=1 for last frame, E is a checksum seed.
 A protocol so far seen only in the Motorola Zaptor.
 
 [protocol]
 name=Zaptor-56
 irp={56k,330,msb}<-1,1|1,-1>([T=0][T=0][T=1],8,-6,2,D:8,T:1,S:7,F:8,E:4,C:4,-74m)+{C = (D:4+D:4:4+S:4+S:3:4+8*T+F:4+F:4:4+E)&15}[D:0..255,S:0..127,F:0..127,E:0..15]
-where T=0 for all frames except the last, T=1 for last frame, E is a checksum seed.
 EFC_translation=MSB
 [documentation]
+where T=0 for all frames except the last, T=1 for last frame, E is a checksum seed.
 A protocol so far seen only in the Motorola Zaptor.
 
 [protocol]
@@ -1891,6 +1888,7 @@ See http://www.hifi-remote.com/forums/viewtopic.php?p=115990#115990.
 # http://www.hifi-remote.com/forums/viewtopic.php?t=16928&start=18
 [protocol]
 name=supersony
+usable=no
 #irp={40.0k,600}<1,-1|2,-1>(                                             \
 #                       X:1:7 ?          (4,-1,X:7,Y:8,^45000u)      \
 #                             : (y:1:7 ? (4,-1,X:7,Y:5,N1:8,^45000u) \
