--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -35,7 +35,7 @@ This protocol signals repeats by the use of <A href="#repeat">dittos</A>.
 
 [protocol]
 name=48-NEC2
-irp={38.4k,564}<1,-1|1,-3>(16,-8,D:8,S:8,F:8,~F:8,E:8,~E:8,1,^108m)+ \
+irp={38.4k,564}<1,-1|1,-3>(16,-8,D:8,S:8,F:8,~F:8,E:8,~E:8,1,^108m)* \
 [D:0..255,S:0..255=255-D,F:0..255,E:0..255]
 EFC_translation=LSB comp
 [documentation]
@@ -90,7 +90,7 @@ name=AK
 [protocol]
 name=Akai
 UEI_protocol=000D
-irp={38k,289}<1,-2.6|1,-6.3>(D:3,F:7,1,^25.3m)+[D:0..7,F:0..127]
+irp={38k,289}<1,-2.6|1,-6.3>(D:3,F:7,1,^25.3m)*[D:0..7,F:0..127]
 EFC_translation=LSB comp prefixed with last device bit
 [documentation]
 This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are likely.
@@ -168,7 +168,7 @@ Apple uses the same framing as NEC1, with D=238 in normal use, 224 while pairing
 
 [protocol]
 name=Archer
-irp={0k,12}<1,-3.3m|1,-4.7m>(F:5,1,-9.7m)+ [F:0..31]
+irp={0k,12}<1,-3.3m|1,-4.7m>(F:5,1,-9.7m)* [F:0..31]
 EFC_translation=5-bit LSB
 [documentation]
 This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are likely.
@@ -187,7 +187,7 @@ byte values in hexadecimal notation.
 [protocol]
 name=Barco
 UEI_protocol=002A
-irp={0k,10}<1,-5|1,-15>(1,-25, D:5,F:6, 1,-25,1,-120m)+[D:0..31,F:0..63]
+irp={0k,10}<1,-5|1,-15>(1,-25, D:5,F:6, 1,-25,1,-120m)*[D:0..31,F:0..63]
 EFC_translation=6-bit LSB comp
 [documentation]
 This is a moderately robust protocol, but <A href="#spurious">spurious decodes</A> are still possible.
@@ -229,7 +229,7 @@ irp={56k,320,msb}<-1,1|1,-1>(T=0,(1,-1,D:7,S:6,T:1,0:1,F:6,~F:1,-85m,T=1)+)[D:0.
 name=Denon
 alt_name=Denon{1}
 alt_name=Denon{2}
-irp={38k,264}<1,-3|1,-7>(D:5,F:8,0:2,1,-165,D:5,~F:8,3:2,1,-165)+ [D:0..31,F:0..255]
+irp={38k,264}<1,-3|1,-7>(D:5,F:8,0:2,1,-165,D:5,~F:8,3:2,1,-165)* [D:0..31,F:0..255]
 EFC_translation=LSB
 [documentation]
 A Denon signal has two halves, either one of which is enough to fully decode
@@ -244,7 +244,7 @@ But only Denon is robust. A Denon{1} or Denon{2} decode might be <A href="#spuri
 name=Denon-K
 UEI_protocol=00CD
 usable=yes
-irp={37k,432}<1,-1|1,-3>(8,-4,84:8,50:8,0:4,D:4,S:4,F:12,((D*16)^S^(F*16)^(F:8:4)):8,1,-173)+ [D:0..15,S:0..15,F:0..4095]
+irp={37k,432}<1,-1|1,-3>(8,-4,84:8,50:8,0:4,D:4,S:4,F:12,((D*16)^S^(F*16)^(F:8:4)):8,1,-173)* [D:0..15,S:0..15,F:0..4095]
 
 EFC_translation=LSB comp
 [documentation]
@@ -328,7 +328,7 @@ results may be less confusing if you use OBC numbers in KM or RM.
 [protocol]
 name=Elan
 UEI_protocol=Unknown
-irp={40.2k,398,msb}<1,-1|1,-2>(3,-2,D:8,~D:8,2,-2,F:8,~F:8,1,^50m)+ [D:0..255,F:0..255]
+irp={40.2k,398,msb}<1,-1|1,-2>(3,-2,D:8,~D:8,2,-2,F:8,~F:8,1,^50m)* [D:0..255,F:0..255]
 [documentation]
 See the <A href="http://www.hifi-remote.com/forums/viewtopic.php?p=87473">JP1-forum</A> for the executor
 
@@ -336,14 +336,14 @@ See the <A href="http://www.hifi-remote.com/forums/viewtopic.php?p=87473">JP1-fo
 [protocol]
 name=Emerson
 UEI_protocol=0065
-irp={36.7k,872}<1,-1|1,-3>(4,-4,D:6,F:6,~D:6,~F:6,1,-39)+ [D:0..63,F:0..63]
+irp={36.7k,872}<1,-1|1,-3>(4,-4,D:6,F:6,~D:6,~F:6,1,-39)* [D:0..63,F:0..63]
 EFC_translation=6-bit LSB comp with 2-bit mini-combo
 [documentation]
 Lists three different EFCs because this protocol is a <A href="#mini combo">mini combo</A>.
 
 [protocol]
 name=F12
-irp={37.9k,422}<1,-3|3,-1>((D:3,S:1,F:8,-80)2,-128)+  [D:0..7,S:0..1,F:0..255]
+irp={37.9k,422}<1,-3|3,-1>((D:3,S:1,F:8,-80)2,-128)*  [D:0..7,S:0..1,F:0..255]
 EFC_translation=Not available in this version of DecodeIr.
 [documentation]
 The F12 specification isn't representable in IRP notation.  The Toshiba specification is
@@ -355,13 +355,13 @@ Spec sheet is at http://www.hifi-remote.com/forums/dload.php?action=file&file_id
 
 [protocol]
 name=F32
-irp={37.9k,422,msb}<1,-3|3,-1>(D:8,S:8,F:8,E:8,-100m)+  [D:0..255,S:0..255,F:0..255,E:0..255]
+irp={37.9k,422,msb}<1,-3|3,-1>(D:8,S:8,F:8,E:8,-100m)*  [D:0..255,S:0..255,F:0..255,E:0..255]
 The meaning of the 32 bits of data is unknown, and the assignment to D, S, F, and E is arbitrary
 
 [protocol]
 name=Fujitsu
 UEI_protocol=00F8
-irp={37k,432}<1,-1|1,-3>(8,-4,20:8,99:8,0:4,E:4,D:8,S:8,F:8,1,-110)+ [D:0..255,S:0..255=D,F:0..255,E:0..15=0]
+irp={37k,432}<1,-1|1,-3>(8,-4,20:8,99:8,0:4,E:4,D:8,S:8,F:8,1,-110)* [D:0..255,S:0..255=D,F:0..255,E:0..15=0]
 
 EFC_translation=LSB comp
 [documentation]
@@ -376,7 +376,7 @@ commands.
 
 [protocol]
 name=Fujitsu-56
-irp={37k,432}<1,-1|1,-3>(8,-4,20:8,99:8,0:4,E:4,D:8,S:8,X:8,F:8,1,-110)+ [D:0..255,S:0..255=D,F:0..255,E:0..15=0,X:0..255=0]
+irp={37k,432}<1,-1|1,-3>(8,-4,20:8,99:8,0:4,E:4,D:8,S:8,X:8,F:8,1,-110)* [D:0..255,S:0..255=D,F:0..255,E:0..15=0,X:0..255=0]
 
 [protocol]
 name=G.I.Cable
@@ -400,9 +400,9 @@ version.
 name=G.I.4DTV
 UEI_protocol=00A4
 
-irp={37.3k,992}<1,-1|1,-3>(5,-2,F:6,D:2,C:4,1,-60)+\
+irp={37.3k,992}<1,-1|1,-3>(5,-2,F:6,D:2,C:4,1,-60)*\
 {C= ((#(F&25) + #(D&5))&1) + 2*((#(F&43) + #(D&7))&1) + 4*((#(F&22) + #(D&7))&1) + 8*((#(F&44) + #(D&6))&1)}\
-[D:0..7, F:0..63]
+[D:0..3, F:0..63]
 EFC_translation=NONE
 [documentation]
 This is a moderately robust protocol, but <A href="#spurious">spurious decodes</A> are still possible.
@@ -415,7 +415,7 @@ you should use the functions sheet of KM or RM to compute it for you from the OB
 [protocol]
 name=GI RG
 UEI_protocol=unknown
-irp={37.3k,1000, msb}<1,-1|1,-3>(5,-3,F:6,S:2,D:8,1,-60)+[D:0..255, S:0..3, F:0..63]
+irp={37.3k,1000, msb}<1,-1|1,-3>(5,-3,F:6,S:2,D:8,1,-60)*[D:0..255, S:0..3, F:0..63]
 EFC translation:
 This is a moderately robust protocol, but <A href="#spurious">spurious decodes</A> are still possible.
 Typical usage is the GI/Next Level/Motorola RC2x00 series
@@ -443,7 +443,7 @@ Note (BM): These two entries was one in the original document; I split it into t
 [protocol]
 name=GXB
 #usable=no
-irp={38.3k,520,msb}<1,-3|3,-1>(1,-1,D:4,F:8,P:1,1,^100m)+{P=1-#F%2}[D:0..15,F:0..255]
+irp={38.3k,520,msb}<1,-3|3,-1>(1,-1,D:4,F:8,P:1,1,^100m)*{P=1-#F%2}[D:0..15,F:0..255]
 [documentation]
 Decoder for a nonstandard Xbox remote.
 
@@ -457,7 +457,7 @@ See http://www.hifi-remote.com/forums/viewtopic.php?t=14219 .
 name=IODATAn
 alt_name=IODATAn-x-y
 UEI_protocol=not known.
-irp={38k,550}<1,-1|1,-3>(16,-8,x:7,D:7,S:7,y:7,F:8,C:4,1,^108m)+ {n = F:4 ^ F:4:4 ^ C:4} [D:0..127,S:0..127,F:0..255,C:0..15=0,x:0..127=0,y:0..127=0]
+irp={38k,550}<1,-1|1,-3>(16,-8,x:7,D:7,S:7,y:7,F:8,C:4,1,^108m)* {n = F:4 ^ F:4:4 ^ C:4} [D:0..127,S:0..127,F:0..255,C:0..15=0,x:0..127=0,y:0..127=0]
 EFC_translation=LSB
 [documentation]
 This is potentially a class of protocols distinguished by values of
@@ -468,7 +468,7 @@ omitted.  The only known example is IODATA1.
 [protocol]
 name=Jerrold
 UEI_protocol=0006
-irp={0k,44}<1,-7.5m|1,-11.5m>(F:5,1,-23.5m)+ [F:0..31]
+irp={0k,44}<1,-7.5m|1,-11.5m>(F:5,1,-23.5m)* [F:0..31]
 [documentation]
 This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are likely.
 
@@ -494,7 +494,7 @@ and others as JVC{2}, you should trust all those decodes and not try Mitsubishi.
 [protocol]
 name=JVC-48
 UEI_protocol=001F or 00C9 or 00CD
-irp={37k,432}<1,-1|1,-3>(8,-4,3:8,1:8,D:8,S:8,F:8,(D^S^F):8,1,-173)+ [D:0..255,S:0..255,F:0..255]
+irp={37k,432}<1,-1|1,-3>(8,-4,3:8,1:8,D:8,S:8,F:8,(D^S^F):8,1,-173)* [D:0..255,S:0..255,F:0..255]
 # wrong parametrization
 #irp={37k,432}<1,-1|1,-3>(8,-4,3:8,1:8,H:4,D:4,S:8,F:8,(H^16*D^S^F):8,1,-173)+ {H=2}[D:0..15,S:0..255,F:0..255]
 EFC_translation=LSB comp
@@ -509,7 +509,7 @@ by directly selecting the "JVC-48" protocol.
 
 [protocol]
 name=JVC-56
-irp={37k,432}<1,-1|1,-3>(8,-4,3:8,1:8,D:8,S:8,X:8,F:8,(D^S^X^F):8,1,-173)+[D:0..255,S:0..255,F:0..255,X:0..255]
+irp={37k,432}<1,-1|1,-3>(8,-4,3:8,1:8,D:8,S:8,X:8,F:8,(D^S^X^F):8,1,-173)*[D:0..255,S:0..255,F:0..255,X:0..255]
 
 [protocol]
 name=Kaseikyo
@@ -531,7 +531,7 @@ name=Kaseikyo
 #name=Kaseikyo-???-???
 #irp={37k,432}<1,-1|1,-3>(8,-4,M:8,N:8,X:4,D:4,S:8,F:8,E:4,C:4,1,-173)+ {X=((M^N)::4)^(M^N)}[D:0..15,S:0..255,F:0..255,X:0..15,M:0..255,N:0..255,E:0..15,C:0..15]
 #irp={37k,432}<1,-1|1,-3>(8,-4,M:8,N:8,X:4,D:4,S:8,F:8,E:4,C:4,1,-173)+ {X=((M^N)::4)^(M^N), chksum=D^S^F^(E*16), C=chksum::4 ^ chksum}[D:0..15,S:0..255,F:0..255,E:0..15,M:0..255,N:0..255]
-irp={37k,432}<1,-1|1,-3>(8,-4,M:8,N:8,X:4,D:4,S:8,F:8,G:8,1,-173)+ {X=((M^N)::4)^(M^N), chksum=D^S^F^(E*16), C=chksum::4 ^ chksum}[D:0..15,S:0..255,F:0..255,M:0..255,N:0..255,G:0..255]
+irp={37k,432}<1,-1|1,-3>(8,-4,M:8,N:8,X:4,D:4,S:8,F:8,G:8,1,-173)* {X=((M^N)::4)^(M^N), chksum=D^S^F^(E*16), C=chksum::4 ^ chksum}[D:0..15,S:0..255,F:0..255,M:0..255,N:0..255,G:0..255]
 # Variable change X -> H
 EFC_translation=LSB comp
 [documentation]
@@ -549,7 +549,7 @@ Kaseikyo-170-90 signals.
 
 [protocol]
 name=Kaseikyo56
-irp={37k,432}<1,-1|1,-3>(8,-4,M:8,N:8,H:4,D:4,S:8,E:8,F:8,G:8,1,-173)+ {H=((M^N)::4)^(M^N), chksum=S^G^F^(E*16)^D, C=chksum::4 ^ chksum}\
+irp={37k,432}<1,-1|1,-3>(8,-4,M:8,N:8,H:4,D:4,S:8,E:8,F:8,G:8,1,-173)* {H=((M^N)::4)^(M^N), chksum=S^G^F^(E*16)^D, C=chksum::4 ^ chksum}\
 [D:0..15,S:0..255,F:0..255,G:0..255,M:0..255,N:0..255,E:0..255]
 [documentation]
 Kaseikyo56 is a lengthened version of the Kaseikyo family of
@@ -572,13 +572,13 @@ but not the device code.
 [protocol]
 name=Konka
 UEI_protocol=019B
-irp={38k,500,msb}<1,-3|1,-5>(6,-6,D:8,F:8,1,-8,1,-46)+ [D:0..255,F:0..255]
+irp={38k,500,msb}<1,-3|1,-5>(6,-6,D:8,F:8,1,-8,1,-46)* [D:0..255,F:0..255]
 EFC_translation=MSB
 
 [protocol]
 name=Logitech
 UEI_protocol=020B
-irp={38k,127}<3,-4|3,-8>(31,-36,D:4,~D:4,F:8,~F:8,3,-50m)+ \
+irp={38k,127}<3,-4|3,-8>(31,-36,D:4,~D:4,F:8,~F:8,3,-50m)* \
 [D:0..15,F:0..255]
 EFC_translation=LSB comp
 [documentation]
@@ -588,7 +588,7 @@ as Kathrein, the device number and OBC are still correct.
 [protocol]
 name=Lumagen
 usable=yes
-irp={38.4k,416,msb}<1,-6|1,-12>(D:4,C:1,F:7,1,-26)+ {C = (#F+1)&1} [D:0..15,F:0..127]
+irp={38.4k,416,msb}<1,-6|1,-12>(D:4,C:1,F:7,1,-26)* {C = (#F+1)&1} [D:0..15,F:0..127]
 EFC_translation=MSB prepended with C bit.
 
 This is a moderately robust protocol, but <A href="#spurious">spurious decodes</A> are still possible.
@@ -614,7 +614,7 @@ corrected.
 
 [protocol]
 name=Matsui
-irp={38k,525}<1,-1|1,-3>(D:3,F:7,1,^30.5m)+ [D:0..7,F:0..127]
+irp={38k,525}<1,-1|1,-3>(D:3,F:7,1,^30.5m)* [D:0..7,F:0..127]
 EFC_translation=Not available in this version of DecodeIr
 [documentation]
 This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are likely.
@@ -644,7 +644,7 @@ upgrades.  Version 1.17 will also have direct support for MCE
 
 [protocol]
 name=Metz19
-irp={37.9k,106,msb}<4,-9|4,-16>((8,-22,T:1,D:3,~D:3,F:6,~F:6,4,-125m)+,T=1-T)[D:0..7,F:0..63,T@:0..1=0]
+irp={37.9k,106,msb}<4,-9|4,-16>((8,-22,T:1,D:3,~D:3,F:6,~F:6,4,-125m)*,T=1-T)[D:0..7,F:0..63,T@:0..1=0]
 [documentation]
 The toggle bit T is inverted each time a new button press occurs.
 
@@ -652,7 +652,7 @@ The toggle bit T is inverted each time a new button press occurs.
 [protocol]
 name=Mitsubishi
 UEI_protocol=0014
-irp={32.6k,300}<1,-3|1,-7>(D:8,F:8,1,-80)+ [D:0..127,F:0..255]
+irp={32.6k,300}<1,-3|1,-7>(D:8,F:8,1,-80)* [D:0..127,F:0..255]
 EFC_translation=LSB comp
 [documentation]
 This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are likely.  It
@@ -664,7 +664,7 @@ them as JVC without changing the numbers.
 
 [protocol]
 name=Mitsubishi-K
-irp={37k,432}<1,-1|1,-3>(8,-4,35:8,203:8,X:4,D:8,S:8,F:8,T:4,1,-100)+ {X=6,T=-S:4:0-S:4:4-F:4:0-F:4:4+15}[D:0..255,F:0..255, S:0..255]
+irp={37k,432}<1,-1|1,-3>(8,-4,35:8,203:8,X:4,D:8,S:8,F:8,T:4,1,-100)* {X=6,T=-S:4:0-S:4:4-F:4:0-F:4:4+15}[D:0..255,F:0..255, S:0..255]
 EFC_translation=not available yet
 [documentation]
 Mitsubishi-K is the member of the Kaseikyo family with OEM_code1=35 and OEM_code2=203.
@@ -708,7 +708,7 @@ EFC_translation=LSB comp
 
 [protocol]
 name=NEC2
-irp={38.4k,564}<1,-1|1,-3>(16,-8,D:8,S:8,F:8,~F:8,1,^108m)+ [D:0..255,S:0..255=255-D,F:0..255]
+irp={38.4k,564}<1,-1|1,-3>(16,-8,D:8,S:8,F:8,~F:8,1,^108m)* [D:0..255,S:0..255=255-D,F:0..255]
 EFC_translation=LSB comp
 [documentation]
 Pioneer is distinguished from NEC2 only by frequency.  So if your
@@ -744,13 +744,13 @@ EFC_translation=LSB comp
 [protocol]
 name=Nokia
 #usable=no
-irp={36k,msb}<164,-276|164,-445|164,-614|164,-783>(412,-276,D:8,S:8,F:8,164,-100m)+ [D:0..255,S:0..255,F:0..255]
+irp={36k,msb}<164,-276|164,-445|164,-614|164,-783>(412,-276,D:8,S:8,F:8,164,-100m)* [D:0..255,S:0..255,F:0..255]
 EFC_translation=MSB
 
 [protocol]
 name=Nokia12
 #usable=no
-irp={36k,msb}<164,-276|164,-445|164,-614|164,-783>(412,-276,D:4,F:8,164,-100m)+[D:0..15,F:0..255]
+irp={36k,msb}<164,-276|164,-445|164,-614|164,-783>(412,-276,D:4,F:8,164,-100m)*[D:0..15,F:0..255]
 EFC_translation=MSB
 
 [protocol]
@@ -1869,7 +1869,7 @@ Two-signal version of the Pioneer protocol; first sends the "normal" signal (par
 
 [protocol]
 name=Fujitsu_Aircon
-irp={38.4k,413}<1,-1|1,-3>(8,-4,20:8,99:8,0:8,16:8,16:8,254:8,9:8,48:8,H:8,J:8, K:8, L:8, M:8,N:8,32:8,Z:8,1,-104.3m)+ \
+irp={38.4k,413}<1,-1|1,-3>(8,-4,20:8,99:8,0:8,16:8,16:8,254:8,9:8,48:8,H:8,J:8, K:8, L:8, M:8,N:8,32:8,Z:8,1,-104.3m)* \
 {H=16*A + wOn, J=16*C + B, K=16*E:4 + D:4, L=tOff:8, M=tOff:3:8+fOff*8+16*tOn:4, N=tOn:7:8+128*fOn,Z=256-(H+J+K+L+M+N+80)%256} \
 [A:0..15,wOn:0..1,B:0..15, C:0..15,D:0..15,E:0..15,tOff:0..1024,tOn:0..1024,fOff:0..1,fOn:0..1]
 [documentation]
