--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -151,7 +151,7 @@ IRDecode v2.43 distinguishes between Amino and Zaptor in order of priority by 1)
 [protocol]
 name=Anthem
 UEI_protocol=0123
-irp={38.0k,605}<1,-1|1,-3>((8000u,-4000u,D:8,S:8,F:8,C:8,1,-25m)3, -75m)+ { C=~(D+S+F+255):8} [D:0..255,S:0..255,F:0..255]
+irp={38.0k,605}<1,-1|1,-3>((8000u,-4000u,D:8,S:8,F:8,C:8,1,-25m)3, -75m)* { C=~(D+S+F+255):8} [D:0..255,S:0..255,F:0..255]
 [documentation]
 Anthem framing is very similar to NEC, and also uses 32 bits of data. However, the leadout is much shorter. The signal is sent at least 3 times. Anthem usually splits F into a 2 bit unit number, and a 6 bit function number.
 
@@ -202,7 +202,7 @@ Was F:7,D:2 until DecodeIr version 2.45.
 [protocol]
 name=Bose
 UEI_protocol=010C
-irp={38.0k,500,msb}<1,-1|1,-3>(2,-3,F:8,~F:8,1,-100m)+ [F:0..255]
+irp={38.0k,500,msb}<1,-1|1,-3>(2,-3,F:8,~F:8,1,-100m)* [F:0..255]
 EFC_translation=MSB
 
 [protocol]
@@ -733,12 +733,12 @@ of "NECx" might be NEC1 or NEC2 or even Tivo or Pioneer.
 
 [protocol]
 name=NECx1
-irp={38.4k,564}<1,-1|1,-3>(8,-8,D:8,S:8,F:8,~F:8,1,^108m,(8,-8,D:1,1,^108m)*) [D:0..255,S:0..255=D-255,F:0..255]
+irp={38.4k,564}<1,-1|1,-3>(8,-8,D:8,S:8,F:8,~F:8,1,^108m,(8,-8,D:1,1,^108m)*) [D:0..255,S:0..255=255-D,F:0..255]
 EFC_translation=LSB comp
 
 [protocol]
 name=NECx2
-irp={38.4k,564}<1,-1|1,-3>(8,-8,D:8,S:8,F:8,~F:8,1,^108m)+ [D:0..255,S:0..255=255-D,F:0..255]
+irp={38.4k,564}<1,-1|1,-3>(8,-8,D:8,S:8,F:8,~F:8,1,^108m)* [D:0..255,S:0..255=255-D,F:0..255]
 EFC_translation=LSB comp
 
 [protocol]
@@ -788,7 +788,7 @@ end frame, or both, is/are missing.
 
 [protocol]
 name=PaceMSS
-irp={38k,630,msb}<1,-7|1,-11>(1,-5,1,-5,T:1,D:1,F:8,1,^120m)+ [D:0..1,F:0..255,T:0..1]
+irp={38k,630,msb}<1,-7|1,-11>(1,-5,1,-5,T:1,D:1,F:8,1,^120m)* [D:0..1,F:0..255,T:0..1]
 EFC_translation=Not available in this version of DecodeIr
 [documentation]
 This is a moderately robust protocol, but <A href="#spurious">spurious decodes</A> are still possible.
@@ -796,7 +796,7 @@ This is a moderately robust protocol, but <A href="#spurious">spurious decodes</
 [protocol]
 name=Panasonic
 UEI_protocol=001F or 00C9 or 00CD
-irp={37k,432}<1,-1|1,-3>(8,-4,2:8,32:8,D:8,S:8,F:8,(D^S^F):8,1,-173)+ [D:0..255,S:0..255,F:0..255]
+irp={37k,432}<1,-1|1,-3>(8,-4,2:8,32:8,D:8,S:8,F:8,(D^S^F):8,1,-173)* [D:0..255,S:0..255,F:0..255]
 EFC_translation=LSB comp
 [documentation]
 Panasonic protocol is the most commonly seen member of the Kaseikyo family
@@ -809,13 +809,13 @@ Panasonic upgrade, don't change those from the default values.
 
 [protocol]
 name=Panasonic2
-irp={37k,432}<1,-1|1,-3>(8,-4,2:8,32:8,D:8,S:8,X:8,F:8,(D^S^X^F):8,1,-173)+ [D:0..255,S:0..255,F:0..255,X:0..255]
+irp={37k,432}<1,-1|1,-3>(8,-4,2:8,32:8,D:8,S:8,X:8,F:8,(D^S^X^F):8,1,-173)* [D:0..255,S:0..255,F:0..255,X:0..255]
 
 [protocol]
 name=Panasonic_Old
 #usable=no
 UEI_protocol=0000 or 0087
-irp={57.6k,833}<1,-1|1,-3>(4,-4,D:5,F:6,~D:5,~F:6,1,-44m)+ [D:0..31,F:0..63]
+irp={57.6k,833}<1,-1|1,-3>(4,-4,D:5,F:6,~D:5,~F:6,1,-44m)* [D:0..31,F:0..63]
 EFC_translation=6-bit LSB comp with 2-bit mini-combo
 [documentation]
 Lists three different EFCs because this protocol is a <A href="#mini combo">mini combo</A>.
@@ -842,14 +842,14 @@ EFC_translation=LSB
 [protocol]
 name=pid-0004
 UEI_protocol=0004
-irp= {0k,msb}<12,-130|12,-372>(F:6,12,-27m)+[F:0..63]
+irp= {0k,msb}<12,-130|12,-372>(F:6,12,-27m)*[F:0..63]
 EFC_translation=6-bit MSB comp
 
 [protocol]
 name=pid-0083
 UEI_protocol=0083
 EFC_translation=5-bit MSB comp
-irp={42.3k, 3000}<1,-3,1,-7|1,-7,1,-3>(F:5,1,-27)+[F:0..31]
+irp={42.3k, 3000}<1,-3,1,-7|1,-7,1,-3>(F:5,1,-27)*[F:0..31]
 [documentation]
 This protocol is a very limited design.  We have seen it used only in
 the UEI setup code TV/0159, which is for some TVs brand named Fisher,
@@ -867,7 +867,7 @@ DecodeIr, so use of OBCs isn't safe.
 
 [protocol]
 name=Pioneer
-irp={40k,564}<1,-1|1,-3>(16,-8,D:8,S:8,F:8,~F:8,1,^108m)+ [D:0..255,S:0..255=255-D,F:0..255]
+irp={40k,564}<1,-1|1,-3>(16,-8,D:8,S:8,F:8,~F:8,1,^108m)* [D:0..255,S:0..255=255-D,F:0..255]
 EFC_translation=LSB comp
 [documentation]
 Pioneer is distinguished from NEC2 only by frequency.  So if your
@@ -898,7 +898,7 @@ same) signal.
 [protocol]
 name=Proton
 UEI_protocol=005C
-irp={38k,500}<1,-1|1,-3>(16,-8,D:8,1,-8,F:8,1,^63m)+[D:0..255,F:0..255]
+irp={38k,500}<1,-1|1,-3>(16,-8,D:8,1,-8,F:8,1,^63m)*[D:0..255,F:0..255]
 EFC_translation=LSB comp
 [documentation]
 This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are likely.
@@ -1017,7 +1017,7 @@ Note (BM): One entry split into two.
 [protocol]
 name=RCA
 UEI protocols: 00AF (RCA) and 0114 (RCA Combo)
-irp={58k,460,msb}<1,-2|1,-4>(8,-8,D:4,F:8,~D:4,~F:8,1,-16)+[D:0..15,F:0..255]
+irp={58k,460,msb}<1,-2|1,-4>(8,-8,D:4,F:8,~D:4,~F:8,1,-16)*[D:0..15,F:0..255]
 EFC_translation=MSB
 [documentation]
 These are two very similar forms of RCA protocol which differ only in
@@ -1034,7 +1034,7 @@ Note (BM): One entry split into two.
 [protocol]
 name=RCA-38
 UEI_protocol=not known
-irp={38.7k,460,msb}<1,-2|1,-4>(8,-8,D:4,F:8,~D:4,~F:8,1,-16)+[D:0..15,F:0..255]
+irp={38.7k,460,msb}<1,-2|1,-4>(8,-8,D:4,F:8,~D:4,~F:8,1,-16)*[D:0..15,F:0..255]
 EFC_translation=MSB
 [documentation]
 These are recently discovered variants of the RCA protocol.  They
@@ -1061,16 +1061,16 @@ irp=RECS80-0045{}[D:0..7,F:0..63, T@:0..1=0]
 
 [protocol]
 name=RECS80-0045
-irp={38k,158,msb}<1,-31|1,-47>(1:1,T:1,D:3,F:6,1,-45m)+ [D:0..7,F:0..63, T@:0..1=0]
+irp={38k,158,msb}<1,-31|1,-47>(1:1,T:1,D:3,F:6,1,-45m)* [D:0..7,F:0..63, T@:0..1=0]
 
 
 [protocol]
 name=RECS80-0068
-irp={33.3k,180,msb}<1,-31|1,-47>(1:1,T:1,D:3,F:6,1,^138m)+ [D:0..7,F:0..63, T@:0..1=0]
+irp={33.3k,180,msb}<1,-31|1,-47>(1:1,T:1,D:3,F:6,1,^138m)* [D:0..7,F:0..63, T@:0..1=0]
 
 [protocol]
 name=RECS80-0090
-irp={0k,158,msb}<1,-31|1,-47>(1:1,T:1,D:3,F:6,1,^138m)+ [D:0..7,F:0..63, T@:0..1=0]
+irp={0k,158,msb}<1,-31|1,-47>(1:1,T:1,D:3,F:6,1,^138m)* [D:0..7,F:0..63, T@:0..1=0]
 
 [protocol]
 name=RECS80
@@ -1165,7 +1165,8 @@ called "Command".
 
 [protocol]
 name=Revox
-irp={0k,15u}<1,-9|1,-19>(1:1,-10,0:1,D:4,F:6,1:1,-10,1:1,-100m)+[D:0..15,F:0..63]
+irp={0k,15u}<1,-9|1,-19>(1,-29,0:1,D:4,F:6,1,-29,1,-100285u)*[D:0..15,F:0..63]
+#irp={0k,15u}<1,-9|1,-19>(1:1,-10,0:1,D:4,F:6,1:1,-10,1:1,-100m)+[D:0..15,F:0..63]
 #irp={67k,15u}<1,-9|1,-19>(1:1,-10,0:1,D:4,F:6,1:1,-10,1:1,-100m)+[D:0..15,F:0..63]
 
 [documentation]
@@ -1176,7 +1177,7 @@ The IRP given here uses the 67KHz approximation.
 [protocol]
 name=Samsung20
 #usable=no
-irp={38.4k,564}<1,-1|1,-3>(8,-8,D:6,S:6,F:8,1,^100m)+[D:0..63,S:0..63,F:0..255]
+irp={38.4k,564}<1,-1|1,-3>(8,-8,D:6,S:6,F:8,1,^100m)*[D:0..63,S:0..63,F:0..255]
 EFC_translation=LSB
 [documentation]
 This is a moderately robust protocol, but <A href="#spurious">spurious decodes</A> are still possible.
@@ -1189,7 +1190,7 @@ EFC_translation=LSB
 
 [protocol]
 name=Sampo
-irp={38.4k, 833}<1,-1|1,-3>(4,-4,D:6,F:6,S:6,~F:6,1,-39)+[D:0..63,S:0..63,F:0..63]
+irp={38.4k, 833}<1,-1|1,-3>(4,-4,D:6,F:6,S:6,~F:6,1,-39)*[D:0..63,S:0..63,F:0..63]
 EFC_translation=Not available in this version of DecodeIr
 [documentation]
 This is a moderately robust protocol, but <A href="#spurious">spurious decodes</A> are still possible.
@@ -1197,7 +1198,7 @@ This is a moderately robust protocol, but <A href="#spurious">spurious decodes</
 [protocol]
 name=ScAtl-6
 UEI_protocol=0078
-irp={57.6k,846}<1,-1|1,-3>(4,-4,D:6,F:6,~D:6,~F:6,1,-40)+[D:0..63,F:0..63]
+irp={57.6k,846}<1,-1|1,-3>(4,-4,D:6,F:6,~D:6,~F:6,1,-40)*[D:0..63,F:0..63]
 EFC_translation=6-bit LSB comp
 [documentation]
 ScAtl-6 is distinguished from Emerson only by frequency. So if you are
@@ -1259,7 +1260,7 @@ up frame will not normally be present in a learned signal.
 
 [protocol]
 name=Sharp
-irp={38k,264}<1,-3|1,-7>(D:5,F:8,1:2,1,-165,D:5,~F:8,2:2,1,-165)+[D:0..31,F:0..255]
+irp={38k,264}<1,-3|1,-7>(D:5,F:8,1:2,1,-165,D:5,~F:8,2:2,1,-165)*[D:0..31,F:0..255]
 EFC_translation=LSB
 [documentation]
 A Sharp signal has two halves, either one of which is enough to fully
@@ -1274,7 +1275,7 @@ href="#spurious">spurious</A>.
 
 [protocol]
 name=Sharp{1}
-irp={38k,264}<1,-3|1,-7>(D:5,F:8,1:2,1,-165)+[D:0..31,F:0..255]
+irp={38k,264}<1,-3|1,-7>(D:5,F:8,1:2,1,-165)*[D:0..31,F:0..255]
 EFC_translation=LSB
 [documentation]
 A Sharp signal has two halves, either one of which is enough to fully
@@ -1289,7 +1290,7 @@ href="#spurious">spurious</A>.
 
 [protocol]
 name=Sharp{2}
-irp={38k,264}<1,-3|1,-7>(D:5,~F:8,2:2,1,-165)+[D:0..31,F:0..255]
+irp={38k,264}<1,-3|1,-7>(D:5,~F:8,2:2,1,-165)*[D:0..31,F:0..255]
 EFC_translation=LSB
 [documentation]
 A Sharp signal has two halves, either one of which is enough to fully
@@ -1305,7 +1306,7 @@ href="#spurious">spurious</A>.
 [protocol]
 name=SharpDVD
 UEI_protocol=00F8
-irp={38k,400}<1,-1|1,-3>(8,-4,170:8,90:8,15:4,D:4,S:8,F:8,E:4,C:4,1,-48)+ \
+irp={38k,400}<1,-1|1,-3>(8,-4,170:8,90:8,15:4,D:4,S:8,F:8,E:4,C:4,1,-48)* \
 {C = D ^ S:4:0 ^ S:4:4 ^ F:4:0 ^ F:4:4 ^ E:4} \
 [D:0..15,S:0..255,F:0..255,E:0..15=1]
 EFC_translation=LSB comp
@@ -1343,7 +1344,7 @@ each 64 larger than the true negative motion, so 63 represents -1 and
 [protocol]
 name=Somfy
 #irp={35.7k}<308,-881|669,-520>(2072,-484,F:2,D:3,C:4,-2300)+
-irp={35.7k}<308,-881|669,-520>(2072,-484,F:2,D:3,C:4,-2300)+{C = F*4 + D + 3}[F:0..3,D:0..7]
+irp={35.7k}<308,-881|669,-520>(2072,-484,F:2,D:3,C:4,-2300)*{C = F*4 + D + 3}[F:0..3,D:0..7]
 [documentation]
 C is reported as SubDevice.  It is probably a check nibble {C = F*4 + D + 3}.
 F = 1 for UP or 2 for DOWN.
@@ -1390,7 +1391,7 @@ DecodeIR V2.43 decodes this as RC5-7F-57
 
 [protocol]
 name=Sunfire
-irp={38k,560,msb}<1,-1|3,-1>(16,-8, D:4,F:8,~D:4,~F:8, -32)+[D:0..15,F:0..255]
+irp={38k,560,msb}<1,-1|3,-1>(16,-8, D:4,F:8,~D:4,~F:8, -32)*[D:0..15,F:0..255]
 EFC_translation=Not available in this version of DecodeIr
 
 [protocol]
@@ -1441,7 +1442,8 @@ This protocol signals repeats by the use of <A href="#repeat">dittos</A>.
 name=Thomson
 UEI_protocol=004B
 irp={33k,500}<1,-4|1,-9>((D:4,T:1,D:1:5,F:6,1,^80m)+,T=1-T)[D:0..63,F:0..63,T@:0..1=0]
-# BM: Bit 5 in D is ignored!!!???
+irp={33k,500}<1,-4|1,-9>((D:4,T:1,D:1:4,F:6,1,^80m)*,T=1-T)[D:0..31,F:0..63,T@:0..1=0]
+# FIXME: BM: Bit 5 in D is ignored!!!???
 EFC_translation=6-bit LSB comp, or that prepended with extra device bit.
 [documentation]
 This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are likely.
@@ -1470,7 +1472,7 @@ KM's default EFC to OBC translation should also be right.
 [protocol]
 name=Thomson7
 UEI_protocol=004B
-irp={33k,500}<1,-4|1,-9>(D:4,T:1,F:7,1,^80m)+ [D:0..15,F:0..127,T@:0..1=0]
+irp={33k,500}<1,-4|1,-9>((D:4,T:1,F:7,1,^80m)*,T=1-T) [D:0..15,F:0..127,T@:0..1=0]
 EFC_translation=7-bit LSB comp
 [documentation]
 DecodeIR2.42 deprecates Thompson (5 bits of device, and 6 bits of
@@ -1485,7 +1487,7 @@ EFC_translation=LSB comp
 
 [protocol]
 name=Velleman
-irp={38k,msb}<700,-5060|700,-7590>(1:1,T:1,D:3,F:6,1,-55m)+ [D:0..7,F:0..31,T@:0..1=0]
+irp={38k,msb}<700,-5060|700,-7590>(1:1,T:1,D:3,F:6,1,-55m)* [D:0..7,F:0..31,T@:0..1=0]
 EFC_translation=6-bit MSB comp
 [documentation]
 Very similar to RECS80-0045, except on duration is longer
@@ -1503,7 +1505,7 @@ Velodyne is a close relative of XMP.
 name=Viewstar
 UEI_protocol=0021
 #irp={50.5k,337}<1,-8|1,-5>(F:5,1,-17)+[F:0..31]
-irp={50.5k,337}<1,-8|1,-5>(~F:5,1,-17)+[F:0..31]
+irp={50.5k,337}<1,-8|1,-5>(~F:5,1,-17)*[F:0..31]
 EFC_translation=5-bit LSB comp
 [documentation]
 This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are likely.
@@ -1511,7 +1513,7 @@ This is not a robust protocol, so <A href="#spurious">spurious decodes</A> are l
 [protocol]
 name=X10
 UEI_protocol=01DF
-irp={40.8k,565}<2,-12|7,-7>(7,-7,F:5,~F:5,21,-7)+[F:0..31]
+irp={40.8k,565}<2,-12|7,-7>(7,-7,F:5,~F:5,21,-7)*[F:0..31]
 EFC_translation=LSB of 2*OBC+1
 [documentation]
 These are two variants of the same Home Automation protocol.  They
@@ -1720,7 +1722,7 @@ UEI_protocol=0022
 irp={40k,520,msb} \
 <1,-10|1,-1,1,-8>(S:1, \
     <1:2|2:2>(F:D), \
-    -90m)+ \
+    -90m)* \
 [S:0..1,F:0..31,D:5..8]
 EFC_translation=MSB
 [documentation]
