--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -1352,7 +1352,7 @@ D = 1, 2 or 3 for the three observed devices, or D = 0 to control all devices to
 
 [protocol]
 name=Sony8
-irp={40k,600}<1,-1|2,-1>(4,-1,F:8,^22200)[F:0..255]
+irp={40k,600}<1,-1|2,-1>(4,-1,F:8,^45m)[F:0..255]
 EFC_translation=LSB
 
 [protocol]
