--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -43,7 +43,7 @@ This protocol signals repeats by the use of <A href="#repeat">dittos</A>.
 
 [protocol]
 name=AdNotam
-irp={35.7k,895,msb}<1,-1|-1,1>(1,-2,1,D:6,F:6,^114m)+[D:0..63,F:0..63]
+irp={35.7k,895,msb}<1,-1|-1,1>(1,-2,1,D:6,F:6,^114m)*[D:0..63,F:0..63]
 [documentation]
 Very similar to RC5, except AdNotam uses two start bits, and no toggle bit.
 
@@ -207,7 +207,7 @@ EFC_translation=MSB
 
 [protocol]
 name=Bryston
-irp={38.0k,315}<1,-6|6,-1>(D:10,F:8,-18m)+ [D:0..1023,F:0..255]
+irp={38.0k,315}<1,-6|6,-1>(D:10,F:8,-18m)* [D:0..1023,F:0..255]
 
 [protocol]
 name=CanalSat
@@ -423,7 +423,7 @@ Typical usage is the GI/Next Level/Motorola RC2x00 series
 [protocol]
 name=Grundig16
 UEI_protocol=0112
-irp={35.7k,578,msb}<-4,2|-3,1,-1,1|-2,1,-2,1|-1,1,-3,1>(806u,-2960u,1346u,T:1,F:8,D:7,-100)+[D:0..127,F:0..255,T@:0..1=0]
+irp={35.7k,578,msb}<-4,2|-3,1,-1,1|-2,1,-2,1|-1,1,-3,1>(806u,-2960u,1346u,T:1,F:8,D:7,-100)*[D:0..127,F:0..255,T@:0..1=0]
 EFC_translation=MSB but with bit pairs translated data->hex by 00->00, 01->11, 10->01, 11->10 and off by one position.
 [documentation]
 These are two variants of the same protocol, differing only in
@@ -434,10 +434,11 @@ Note (BM): These two entries was one in the original document; I split it into t
 [protocol]
 name=Grundig16-30
 UEI_protocol=00AB
-irp={30.3k,578,msb}<-4,2|-3,1,-1,1|-2,1,-2,1|-1,1,-3,1>(806u,-2960u,1346u,T:1,F:8,D:7,-100)+ [D:0..127,F:0..255,T:0..1]
+irp={30.3k,578,msb}<-4,2|-3,1,-1,1|-2,1,-2,1|-1,1,-3,1>(806u,-2960u,1346u,T:1,F:8,D:7,-100)* [D:0..127,F:0..255,T:0..1]
 EFC_translation= MSB but with bit pairs translated data->hex by 00->00, 01->11, 10->01, 11->10 and off by one position.
 [documentation]
-These are two variants of the same protocol, differing only in frequency.  The IRP notation is corrected from previous versions of this document, to bring it into line with what DecodeIR actually does.
+These are two variants of the same protocol, differing only in frequency.
+The IRP notation is corrected from previous versions of this document, to bring it into line with what DecodeIR actually does.
 
 Note (BM): These two entries was one in the original document; I split it into two separate.
 [protocol]
@@ -755,7 +756,7 @@ EFC_translation=MSB
 
 [protocol]
 name=Nokia32
-irp={36k,msb}<164,-276|164,-445|164,-614|164,-783>(412,-276,D:8,S:8,T:1,X:7,F:8,164,^100m,T=1-T)+ [D:0..255,S:0..255,F:0..255,T@:0..1=0,X:0..127]
+irp={36k,msb}<164,-276|164,-445|164,-614|164,-783>(412,-276,D:8,S:8,T:1,X:7,F:8,164,^100m,T=1-T)* [D:0..255,S:0..255,F:0..255,T@:0..1=0,X:0..127]
 EFC_translation=MSB
 [documentation]
 The Nokia32 protocol is one variation of the RCMM 1.5 protocol developed by Philips.  RCMM refers to X as "System" and to D:2,S:4:4 as "Customer"
@@ -836,7 +837,7 @@ As of version 8.31 KM has seriously wrong OBC translation for pid-0001, so use o
 [protocol]
 name=pid-0003
 UEI_protocol=0003
-irp= {40.2k,389}<2,-2|3,-1>(F:8,~F:8,^102m)+[F:0..255]
+irp= {40.2k,389}<2,-2|3,-1>(F:8,~F:8,^102m)*[F:0..255]
 EFC_translation=LSB
 
 [protocol]
@@ -925,7 +926,7 @@ EFC_translation=7-bit MSB comp
 [protocol]
 name=RC5-7F-57
 UEI_protocol=0182
-irp={57k,msb,889}<1,-1|-1,1>(1, ~D:1:5,T:1,D:5,F:7,^114m)+[D:0..63,F:0..127,T@:0..1=0]
+irp={57k,msb,889}<1,-1|-1,1>(1, ~D:1:5,T:1,D:5,F:7,^114m)*[D:0..63,F:0..127,T@:0..1=0]
 EFC_translation=7-bit MSB comp
 
 [protocol]
@@ -1148,7 +1149,7 @@ decodes.
 name=Replay
 #usable=no
 UEI_protocol=0092
-irp={36k,444,msb}<-1,1|1,-1>(6,-2,1:1,6:3,<-2,2|2,-2>(T:1),D:8,S:8,F:8,-100m/*???*/)+[D:0..255,S:0..255,F:0..255,T@:0..1=0]
+irp={36k,444,msb}<-1,1|1,-1>(6,-2,1:1,6:3,<-2,2|2,-2>(T:1),D:8,S:8,F:8,-100m/*???*/)*[D:0..255,S:0..255,F:0..255,T@:0..1=0]
 EFC_translation=MSB
 [documentation]
 Replay is a member of the RC6 family.  Technically it is RC6-6-24, but
@@ -1185,8 +1186,9 @@ This is a moderately robust protocol, but <A href="#spurious">spurious decodes</
 [protocol]
 name=Samsung36
 UEI_protocol=01B5
-irp={38k,500}<1,-1|1,-3>(9,-9,D:8,S:8,1,-9,E:4,F:8,-68u,~F:8,1,-118)+[D:0..255,S:0..255,F:0..255,E:0..15]
+irp={38k,500}<1,-1|1,-3>(9,-9,D:8,S:8,1,-9,E:4,F:8,-68u,~F:8,1,-118)*[D:0..255,S:0..255,F:0..255,E:0..15]
 EFC_translation=LSB
+TODO=the -68u gap is a bitch when recognizing.
 
 [protocol]
 name=Sampo
@@ -1358,24 +1360,24 @@ EFC_translation=LSB
 [protocol]
 name=Sony12
 UEI_protocol=00CA
-irp={40k,600}<1,-1|2,-1>(4,-1,F:7,D:5,^45m)+[D:0..31,F:0..127]
+irp={40k,600}<1,-1|2,-1>(4,-1,F:7,D:5,^45m)*[D:0..31,F:0..127]
 EFC_translation=LSB
 
 [protocol]
 name=Sony15
 UEI_protocol=00CA
-irp={40k,600}<1,-1|2,-1>(4,-1,F:7,D:8,^45m)+[D:0..255,F:0..127]
+irp={40k,600}<1,-1|2,-1>(4,-1,F:7,D:8,^45m)*[D:0..255,F:0..127]
 EFC_translation=LSB
 
 [protocol]
 name=Sony20
 UEI_protocol=00DE
-irp={40k,600}<1,-1|2,-1>(4,-1,F:7,D:5,S:8,^45m)+[D:0..31,S:0..255,F:0..127]
+irp={40k,600}<1,-1|2,-1>(4,-1,F:7,D:5,S:8,^45m)*[D:0..31,S:0..255,F:0..127]
 EFC_translation=LSB
 
 [protocol]
 name=StreamZap
-irp={36k,msb,889}<1,-1|-1,1>(1,~F:1:6,T:1,D:6,F:6,^114m)+[D:0..63,F:0..63,T:0..1]
+irp={36k,msb,889}<1,-1|-1,1>(1,~F:1:6,T:1,D:6,F:6,^114m)*[D:0..63,F:0..63,T:0..1]
 EFC_translation=6-bit MSB comp
 [documentation]
 DecodeIR V2.43 decodes this as RC5-7F
@@ -1383,7 +1385,7 @@ DecodeIR V2.43 decodes this as RC5-7F
 
 [protocol]
 name=StreamZap-57
-irp={57k,msb,889}<1,-1|-1,1>(1,~F:1:6,T:1,D:6,F:6,^114m)+[D:0..63,F:0..63,T:0..1]
+irp={57k,msb,889}<1,-1|-1,1>(1,~F:1:6,T:1,D:6,F:6,^114m)*[D:0..63,F:0..63,T:0..1]
 EFC_translation=6-bit MSB comp
 [documentation]
 DecodeIR V2.43 decodes this as RC5-7F-57
@@ -1396,7 +1398,7 @@ EFC_translation=Not available in this version of DecodeIr
 
 [protocol]
 name=TDC-38
-irp={38k,315,msb}<-1,1|1,-1>(1:1,D:5,S:5,F:7,-89m)+[D:0..31,S:0..31,F:0..127]
+irp={38k,315,msb}<-1,1|1,-1>(1:1,D:5,S:5,F:7,-89m)*[D:0..31,S:0..31,F:0..127]
 EFC_translation=7-bit MSB.
 [documentation]
 There are two variants of this protocol, with different frequencies
@@ -1409,7 +1411,7 @@ are other implementations which do not follow that pattern.
 
 [protocol]
 name=TDC-56
-irp={56.3k,213,msb}<-1,1|1,-1>(1:1,D:5,S:5,F:7,-89m)+[D:0..31,S:0..31,F:0..127]
+irp={56.3k,213,msb}<-1,1|1,-1>(1:1,D:5,S:5,F:7,-89m)*[D:0..31,S:0..31,F:0..127]
 EFC_translation=7-bit MSB.
 [documentation]
 There are two variants of this protocol, with different frequencies
@@ -1751,7 +1753,7 @@ F=1 it triggers after a delay of approximately two seconds.
 [protocol]
 name=arctech
 irp={0k,388}<1,-3|3,-1> \
-(<0:2|2:2>((D-1):4,(S-1):4),40:7,F:1,0:1,-10.2m)+ \
+(<0:2|2:2>((D-1):4,(S-1):4),40:7,F:1,0:1,-10.2m)* \
 [D:1..16,S:1..16,F:0..1]
 [documentation]
 Protocol used by several manufacturers of 433MHz RF controlled
@@ -1773,7 +1775,7 @@ this protocol, 2200 for house A etc. up to 2215 for house "P".
 [protocol]
 name=arctech-38
 irp={38k,388}<1,-3|3,-1> \
-(<0:2|2:2>((D-1):4,(S-1):4),40:7,F:1,0:1,-10.2m)+ \
+(<0:2|2:2>((D-1):4,(S-1):4),40:7,F:1,0:1,-10.2m)* \
 [D:1..16,S:1..16,F:0..1]
 [documentation]
 Protocol used by several manufacturers of 433MHz RF controlled
@@ -1809,7 +1811,7 @@ d = D-1, \
 h1 = H1-1, h2 = H2-1, h3 = H3-1, h4 = H4-1, \
 P=~(#d+#F):1, \
 sum=9+(h4*4+h3) + (h2*4+h1) + (P*8+d) + F*4, \
-25:6,h4:2,h3:2,h2:2,h1:2,P:1,d:3,F:2,0:2,sum:4,-1160p)+ \
+25:6,h4:2,h3:2,h2:2,h1:2,P:1,d:3,F:2,0:2,sum:4,-1160p)* \
 [H1:1..4, H2:1..4, H3:1..4, H4:1..4, D:1..6, F:0..2]
 [documentation]
 This protocol is/was used by the so-called RS-200 RF (433MHz)
@@ -1851,7 +1853,7 @@ white_r 0x6F 231
 [protocol]
 name=RC6-M-56
 usable=yes
-irp={36k,444,msb}<-1,1|1,-1>(6,-2,1:1,M:3,<-2,2|2,-2>(T:1),C:56,-131.0m)+[M:0..7,T:0..1=0,C:0..72057594037927935]
+irp={36k,444,msb}<-1,1|1,-1>(6,-2,1:1,M:3,<-2,2|2,-2>(T:1),C:56,-131.0m)*[M:0..7,T:0..1=0,C:0..72057594037927935]
 [documentation]
 This is the "RC6-?-?? protocol" made useable for the case of ??=56.
 
@@ -1880,7 +1882,7 @@ Protocol for Fujitsu inverter air conditioning. See http://www.remotecentral.com
 [protocol]
 name=Roku-Official
 irp={38.0k,564}<1,-1|1,-3>(16,-8,D:8,S:8,F:7,0:1,~F:7,1:1,1,^108m, (16,-8,D:8,S:8,F:7,1:1,~F:7,0:1,1,^108m)+) \
-[D:0..255,S:0..255=255-D,F:0..255]
+[D:0..255,S:0..255=255-D,F:0..127]
 [documentation]
 This IR protocol is very similar to NEC2, except the repeat behavior is different.
 The second and additional frames of a repeating signal send the OBC + 128.
