--- a/pom.xml
+++ b/pom.xml
@@ -163,11 +163,11 @@
             <version>9.7.0-6</version>
         </dependency>
 
-        <!-- Only for testing! Might be removed in the future -->
+        <!-- May only be used for testing! Might be removed in the future -->
         <dependency>
             <groupId>org.harctoolbox</groupId>
             <artifactId>IrpMaster</artifactId>
-            <version>1.2</version>
+            <version>1.3</version>
         </dependency>
 
     </dependencies>
