Even more recognition fixes.

--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -921,7 +921,7 @@ Philips terminology.
 [protocol]
 name=RC5-7F
 UEI_protocol=0182
-irp={36k,msb,889}<1,-1|-1,1>((1, ~D:1:5,T:1,D:5,F:7,^114m)+,T=1-T) [D:0..63,F:0..127,T@:0..1=0]
+irp={36k,msb,889}<1,-1|-1,1>((1, ~D:1:5,T:1,D:5,F:7,^114m)*,T=1-T) [D:0..63,F:0..127,T@:0..1=0]
 EFC_translation=7-bit MSB comp
 
 [protocol]
@@ -933,7 +933,7 @@ EFC_translation=7-bit MSB comp
 [protocol]
 name=RC5x
 UEI_protocol=00F2
-irp={36k,msb,889}<1,-1|-1,1>((1,~S:1:6,T:1,D:5,-4,S:6,F:6,^114m)+,T=1-T) [D:0..31,S:0..127,F:0..63,T@:0..1=0]
+irp={36k,msb,889}<1,-1|-1,1>((1,~S:1:6,T:1,D:5,-4,S:6,F:6,^114m)*,T=1-T) [D:0..31,S:0..127,F:0..63,T@:0..1=0]
 EFC_translation=NONE
 [documentation]
 The official (UEI) protocol executor for RC5x does not support EFC
@@ -1002,7 +1002,7 @@ ending ?? represents the number of data bits in the signal.
 [protocol]
 name=RCA(Old)
 UEI protocols: 002D(RCA(Old)) and 0114 (RCA Combo)
-irp={58k,460,msb}<1,-2|1,-4>(32,(8,-8,D:4,F:8,~D:4,~F:8,2,-16)+)[D:0..15,F:0..255]
+irp={58k,460,msb}<1,-2|1,-4>([40][8],-8,D:4,F:8,~D:4,~F:8,2,-16)[D:0..15,F:0..255]
 EFC_translation=MSB
 [documentation]
 These are two very similar forms of RCA protocol which differ only in
@@ -1048,7 +1048,7 @@ Note (BM): One entry split into two.
 [protocol]
 name=RCA-38(Old)
 UEI_protocol=not known
-irp={38.7k,460,msb}<1,-2|1,-4>(32,(8,-8,D:4,F:8,~D:4,~F:8,2,-16)+)[D:0..15,F:0..255]
+irp={38.7k,460,msb}<1,-2|1,-4>([40][8],-8,D:4,F:8,~D:4,~F:8,2,-16)[D:0..15,F:0..255]
 EFC_translation=MSB
 [documentation]
 These are recently discovered variants of the RCA protocol.  They
@@ -1705,7 +1705,7 @@ name=XX
 
 [protocol]
 name=Zaptor-36
-irp={36k,330,msb}<-1,1|1,-1>([T=0][T=0][T=1],8,-6,2,D:8,T:1,S:7,F:8,E:4,C:4,-74m)+{C = (D:4+D:4:4+S:4+S:3:4+8*T+F:4+F:4:4+E)&15}[D:0..255,S:0..127,F:0..127,E:0..15]
+irp={36k,330,msb}<-1,1|1,-1>([T=0][T=0][T=1],8,-6,2,D:8,T:1,S:7,F:8,E:4,C:4,-74m){C = (D:4+D:4:4+S:4+S:3:4+8*T+F:4+F:4:4+E)&15}[D:0..255,S:0..127,F:0..127,E:0..15]
 EFC_translation=MSB
 [documentation]
 where T=0 for all frames except the last, T=1 for last frame, E is a checksum seed.
@@ -1713,7 +1713,7 @@ A protocol so far seen only in the Motorola Zaptor.
 
 [protocol]
 name=Zaptor-56
-irp={56k,330,msb}<-1,1|1,-1>([T=0][T=0][T=1],8,-6,2,D:8,T:1,S:7,F:8,E:4,C:4,-74m)+{C = (D:4+D:4:4+S:4+S:3:4+8*T+F:4+F:4:4+E)&15}[D:0..255,S:0..127,F:0..127,E:0..15]
+irp={56k,330,msb}<-1,1|1,-1>([T=0][T=0][T=1],8,-6,2,D:8,T:1,S:7,F:8,E:4,C:4,-74m){C = (D:4+D:4:4+S:4+S:3:4+8*T+F:4+F:4:4+E)&15}[D:0..255,S:0..127,F:0..127,E:0..15]
 EFC_translation=MSB
 [documentation]
 where T=0 for all frames except the last, T=1 for last frame, E is a checksum seed.
@@ -1854,7 +1854,7 @@ white_r 0x6F 231
 [protocol]
 name=RC6-M-56
 usable=yes
-irp={36k,444,msb}<-1,1|1,-1>(6,-2,1:1,M:3,<-2,2|2,-2>(T:1),C:56,-131.0m)*[M:0..7,T:0..1=0,C:0..72057594037927935]
+irp={36k,444,msb}<-1,1|1,-1>(6,-2,1:1,M:3,<-2,2|2,-2>(T:1),C:56,-131.0m)*[M:0..7,T@:0..1=0,C:0..72057594037927935]
 [documentation]
 This is the "RC6-?-?? protocol" made useable for the case of ??=56.
 
