Further work on code generation (checkpoint).

--- a/src/main/config/IrpProtocols.ini
+++ b/src/main/config/IrpProtocols.ini
@@ -1928,6 +1928,19 @@ The second and additional frames of a repeating signal send the OBC + 128.
 See http://www.hifi-remote.com/forums/viewtopic.php?p=115990#115990.
 
 # http://www.hifi-remote.com/forums/viewtopic.php?t=16928&start=18
+
+[protocol]
+name=NEC-Shirriff
+irp={38.4k,msb,564}<1,-1|1,-3>(16,-8,data:length,1,^108m) [data:0..UINT32_MAX,length:1..64]
+[documentation]
+Like Nec1 but without repeat, just one large parameter, and msb bit order.
+
+[protocol]
+name=NEC-Shirriff-32
+irp={38.4k,msb,564}<1,-1|1,-3>(16,-8,data:32,1,^108m) [data:0..UINT32_MAX]
+[documentation]
+Like Nec1 but without repeat, just one large parameter, and msb bit order.
+
 [protocol]
 name=supersony
 usable=no
