Checkpoint: java render code generation now mostly works, except for hierarchical bitspecs and bitfields with length not a multiple of chunksize.

--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,7 @@
                             <arguments>
                                 <argument>+x</argument>
                                 <argument>${project.nameLowercase}.sh</argument>
+                                <argument>javagenerator.sh</argument>
                             </arguments>
                         </configuration>
                     </execution>
