--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,7 @@
                                 <argument>+x</argument>
                                 <argument>${project.nameLowercase}.sh</argument>
                                 <argument>javagenerator.sh</argument>
+                                <argument>javadecodergenerator.sh</argument>
                             </arguments>
                         </configuration>
                     </execution>
