Some new stuff for testing etc.

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,22 @@
                             </resources>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>copy-resources-xslt</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${basedir}/target/xslt</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/xslt</directory>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
             <plugin>
