--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ irp.xml
 catalog.xml
 nbproject
 JavaTestProtocol
+all-protocols.xml
+lirc.xml
+lirc.xml.old
+files.gnumeric
+graveyard
+src/test/decoderfiles-
